Revert "Gradle Plugin should be compatible with JDK 11"
This reverts commit e44d358568871e7665db733ec25ff2122dd2a280.